--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Django==2.0.7
-djangorestframework==3.8.2
-drfaddons==0.0.1
-pkg-resources==0.0.0
-pytz==2018.5
+Django<=2.0.5
+djangorestframework<=3.8.2
+djangorestframework-jwt<=1.11.0
+drfaddons<=0.0.2
+PyJWT<=1.6.4
+pytz<=2018.4
